src/objects/DataForMaster__c.object
<CustomObject>
    <fields>
        <fullName>Amount1__c</fullName>
        <label>Amount1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount2__c</fullName>
        <label>Amount2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtraction__c</fullName>
        <label>ApplyFormula</label>
        <referenceTo>ApplyFormula__c</referenceTo>
        <relationshipLabel>DataForMasters</relationshipLabel>
        <relationshipName>DataForMasters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Amount1__c+Amount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>DataForMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataForMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataForMasters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>